# autotyper

./: .gitignore  BUILD.md  MANIFEST.in  Makefile  README.md  autotyper.spec  build-binary.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: build-binary.yml  test.yml
src/autotyper/: __init__.py  cli.py  core.py
tests/: __init__.py  test_core.py
